--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="motherBoadr">
-        Материнская плата — элемент компьютера, который позволяет собрать в единую систему все устройства, чтобы они стабильно работали и выдавали нужные параметры производительности.
+        <p> <br/>элемент компьютера, который позволяет собрать в единую систему все устройства, чтобы они стабильно работали и выдавали нужные параметры производительности.</p>
         От надёжности материнской платы зависит срок работы компьютера, а от её конфигурации — возможность улучшать его в будущем.
 Материнскую плату выбирают с учётом сокета процессора, чипсета, количества и вида слотов для остальных элементов системы
         Форм-фактор материнской платы — стандарт, определяющий размеры материнской платы для компьютера, места её крепления к шасси; расположение на ней интерфейсов шин, портов ввода-вывода, разъёма процессора, слотов для оперативной памяти, а также тип разъёма для подключения блока питания.
@@ -14,6 +14,6 @@
 Устаревшими являются форматы: Baby-AT; полноразмерная плата AT; LPX; BTX, MicroBTX и PicoBTX.
 Современные и массово применяемые форматы: ATX; microATX; Mini-ITX.
 Внедряемые форматы: Nano-ITX; Pico-ITX; FlexATX; NLX; WTX, CEB.
-Существуют материнские платы, не соответствующие никаким из существующих форм-факторов. Это принципиальное решение производителя, обусловленное желанием создать на рынке несовместимый с существующими продуктами «бренд» (Apple, Commodore, Silicon Graphics, Hewlett-Packard, Compaq чаще других игнорировали стандарты) и эксклюзивно производить к нему периферийные устройства и аксессуары.
+            Существуют материнские платы, не соответствующие никаким из существующих форм-факторов. Это принципиальное решение производителя, обусловленное желанием создать на рынке несовместимый с существующими продуктами «бренд» (Apple, Commodore, Silicon Graphics, Hewlett-Packard, Compaq чаще других игнорировали стандарты) и эксклюзивно производить к нему периферийные устройства и аксессуары.
     </string>
 </resources>
