--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="motherBoadr">
-        <p> <br/>элемент компьютера, который позволяет собрать в единую систему все устройства, чтобы они стабильно работали и выдавали нужные параметры производительности.</p>
+        <p> <br />элемент компьютера, который позволяет собрать в единую систему все устройства, чтобы они стабильно работали и выдавали нужные параметры производительности.</p>
         От надёжности материнской платы зависит срок работы компьютера, а от её конфигурации — возможность улучшать его в будущем.
 Материнскую плату выбирают с учётом сокета процессора, чипсета, количества и вида слотов для остальных элементов системы
         Форм-фактор материнской платы — стандарт, определяющий размеры материнской платы для компьютера, места её крепления к шасси; расположение на ней интерфейсов шин, портов ввода-вывода, разъёма процессора, слотов для оперативной памяти, а также тип разъёма для подключения блока питания.
@@ -15,5 +15,72 @@
 Современные и массово применяемые форматы: ATX; microATX; Mini-ITX.
 Внедряемые форматы: Nano-ITX; Pico-ITX; FlexATX; NLX; WTX, CEB.
             Существуют материнские платы, не соответствующие никаким из существующих форм-факторов. Это принципиальное решение производителя, обусловленное желанием создать на рынке несовместимый с существующими продуктами «бренд» (Apple, Commodore, Silicon Graphics, Hewlett-Packard, Compaq чаще других игнорировали стандарты) и эксклюзивно производить к нему периферийные устройства и аксессуары.
+    </string>
+    <string name="processor">Центра́льный проце́ссор  — это электронный блок либо интегральная схема, исполняющая машинные инструкции (код программ), главная часть аппаратного обеспечения компьютера или программируемого логического контроллера.
+        Иногда этот компонент называют просто процессором.
+Изначально термин центральное процессорное устройство описывал специализированную систему элементов, предназначенных для понимания и выполнения машинного кода компьютерных программ, а не только фиксированных логических операций.
+        Начало применения термина и его аббревиатуры по отношению к компьютерным системам было положено в 1960-е годы. Устройство, архитектура и реализация процессоров с тех пор неоднократно менялись.
+        В современных вычислительных системах все функции центрального процессора обычно выполняет одна микросхема высокой степени интеграции — микропроцессор.</string>
+    <string name="hard_drive">
+            <p>В отличие от гибкого диска (дискеты), информация в НЖМД записывается на жёсткие (алюминиевые или стеклянные) пластины[en],
+        покрытые слоем ферромагнитного материала, чаще всего диоксида хрома — магнитные диски.
+        В НЖМД используется одна или несколько пластин на одной оси. Считывающие головки в рабочем
+        режиме не касаются поверхности пластин благодаря прослойке набегающего потока воздуха, образующейся
+        у поверхности при быстром вращении. Расстояние между головкой и диском составляет несколько нанометров
+        (в современных дисках около 10 нм[1]), а отсутствие механического контакта обеспечивает долгий срок службы устройства.
+        При отсутствии вращения дисков головки находятся у шпинделя или за пределами диска в безопасной («парковочной») зоне,
+                где исключён их нештатный контакт с поверхностью дисков.</p>
+
+<p>Также, в отличие от гибкого диска, носитель информации обычно совмещают с накопителем, приводом и блоком электроники.
+    Такие жёсткие диски часто используются в качестве несъёмного носителя информации.</p>
+
+<p>Со второй половины 2000-х годов получили распространение более производительные твердотельные накопители,
+        вытесняющие дисковые накопители из ряда применений несмотря на более высокую стоимость единицы хранения;
+        жёсткие диски при этом, по состоянию на середину 2010-х годов, получили широкое распространение как недорогие
+    и высокоёмкие устройства хранения как в потребительском сегменте, так и корпоративном.</p>
+    </string>
+    <string name="memory">
+       <p> Оперативная память — относительно быстрая энергозависимая память компьютера с произвольным доступом,
+        в которой осуществляются большинство операций обмена данными между устройствами. Является энергозависимой,
+           то есть при отключении питания, все данные на ней стираются.</p>
+        <p>Оперативная память является хранилищем всех потоков информации, которые необходимо обработать процессору или же они дожидаются в оперативной памяти своей очереди.</p>
+        <p>Все устройства, связывается с оперативной памятью через системную шину, а с ней в свою очередь обмениваются через кэш или же напрямую.
+Означает это то, что при необходимости, память может напрямую обратиться к одному, необходимому блоку, не затрагивая при этом остальные.
+            Скорость произвольного доступа не меняется от места нахождения нужной информации, что является огромным плюсом.</p>
+<p>Оперативная память, выгодно отличается от энергозависимой памяти, практически нулевым влиянием количества операций чтениязаписи на срок службы и долговечность.
+        При соблюдении всех тонкостей при производстве, оперативная память очень редко выходит из строя.
+        В большинстве случаев, повреждённая память, начинает допускать ошибки, которые приводят к краху
+    системы или нестабильной работе многих устройств компьютера.</p>
+    </string>
+    <string name="videocard">
+        <p>Видеокарта — устройство, преобразующее графический образ, хранящийся как содержимое памяти компьютера (или самого адаптера)
+        в форму, пригодную для дальнейшего вывода на экран монитора. Обычно видеокарта выполнена в виде печатной платы
+            и вставляется в слот расширения материнской платы, универсальный либо специализированный .</p>
+<p>Также широко распространены и расположенные на системной плате видеокарты — как в виде дискретного отдельного чипа GPU,
+        так и в качестве составляющей части северного моста чипсета или ЦПУ; в случае ЦПУ, встроенный  GPU, строго говоря,
+    не может быть назван видеокартой.</p>
+<p>Видеокарты не ограничиваются простым выводом изображения, они имеют встроенный графический процессор,
+        который может производить дополнительную обработку, снимая эту задачу с центрального процессора компьютера. Например, видеокарты Nvidia и AMD
+    осуществляют рендеринг графического конвейера OpenGL и DirectX и Vulkan на аппаратном уровне.</p>
+        <p>Также имеет место тенденция использовать вычислительные возможности графического процессора для решения неграфических задач (например, добычи криптовалюты).</p>
+    </string>
+    <string name="case_text">
+        <p>Фронтальная сторона корпуса компьютера обычно оборудована:</p>
+    <p>кнопками включения и перезагрузки. На корпусах форм-фактора AT обычно имеется кнопка Turbo,
+        на некоторых ATX ранних выпусков встречается отдельная кнопка ждущего режима;</p>
+<p>светодиодами-индикаторами отображающими работу компьютера, состояние питания и накопителей,
+        состояние жесткого диска. Некоторые корпуса имеют на передней части дисплей, показывающий частоту работы процессора,
+        скорость вращения вентилятора охлаждения процессора, температуру кристалла процессора, температуру кристалла графического процессора;
+    гнёздами для подключения наушников и микрофона;</p>
+<p>Панельками, закрывающими отсеки 5.25". В эти отсеки могут устанавливаться оптические приводы, дополнительные салазки для жёсткого диска с вентиляторами,
+        дополнительная панелька с вентиляторами, реобас для регулировки скорости вращения вентилятора кулера.
+    Панельки 3'5", на месте которых могут быть карт-ридер или дисковод для дискет </p>
+<p>разъемами для подключения некоторых внешних устройств с интерфейсами передачи данных (USB, eSATA, COM (последовательный порт), FireWire, редко HDMI)
+    Нередко - решёткой забора воздуха для переднего вентилятора.</p>
+        <p>В ходе технологического совершенствования, обусловленного техническим прогрессом, наметилась тенденция к микроминиатюризации компонентов электронной техники,
+        что позволило интегрировать непосредственно на материнскую плату большую часть схем, ранее выпускавшихся в виде отдельных плат расширения.
+        Прогресс в развитии программно-аппаратных кодеков видео и звука также позволил устанавливать непосредственно на материнскую плату миниатюрные
+        микросхемы аудио и видео кодеков и разъёмы их аппаратных интерфейсов. Отдельной веткой развития коммуникационных интерфейсов стала трансформация
+            портов для обмена данными непосредственно с отдельными устройствами (клавиатура, мышь, ...) так и с локальными сетями, в том числе и беспроводными.</p>
     </string>
 </resources>
